feat: added total authors imported on response; delete some comments
