# docs/swagger.yaml
@@ -145,8 +145,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             type: string
         "400":
